# MFRT

./: .gitignore  AGENTS.md  API_SETUP.md  CLAUDE.md  INTENT_AWARE_SYSTEM_DESIGN.md  META_PROMPT_FILES.txt  META_PROMPT_PORT_SUMMARY.md  OPTIMIZATION_FLOW_ANALYSIS.md  PORT_VERIFICATION.md  README.md  TWO_PHASE_SCORING_DETAILED.md  check_distribution.py  check_mock_distribution.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_milestone_request.json
.beads/: issues.jsonl
.claude/skills/bead-method/: SKILL.md
.claude/skills/production-flow/: SKILL.md
api/: IMPLEMENTATION_SUMMARY.md  MODELS.md  QUICK_REFERENCE.md  __init__.py  main.py  models.py  models_example.py
api/routes/: __init__.py  health.py  huggingface.py  optimize.py
docs/: ALL_OPTIMIZE_APIS.md  BEFORE_AFTER_METRICS.md  EVALUATOR_PATTERN.md  HUGGINGFACE_API_OUTPUT.md  meta_prompt_system.md
examples/: abbott_chatbot_example.py  abbott_demo.py  api_evaluator_example.py  demo_two_stage_evaluator.py  evaluator_example.py  meta_prompt_example.py  test_hf_simple.py  test_huggingface_api.py
prompts/evaluators/: milestone_evaluator.txt
report_component_task/: PLANNING_SUMMARY.md  task_00_overview.md  task_01_analyze_optimization_flow.md  task_02_two_stage_evaluator.md  task_03_fix_meta_prompt_template.md  task_04_auto_fill_placeholders.md  task_05_update_test.md  task_construction_extractor.md  task_construction_similarity_evaluator.md  task_reasoning_path_evaluator.md  task_two_phase_meta_prompt.md  task_two_phase_optimizer.md  task_xml_output_parser.md
scripts/: run_api.py
src/chaos_auto_prompt/: __init__.py
src/chaos_auto_prompt/config/: __init__.py  pricing.py  settings.py
src/chaos_auto_prompt/core/: __init__.py  dataset_splitter.py  pricing.py
src/chaos_auto_prompt/evaluators/: __init__.py  classification.py  construction_similarity.py  reasoning_path.py  two_stage.py
src/chaos_auto_prompt/interfaces/: __init__.py  evaluator.py
src/chaos_auto_prompt/optimizers/: __init__.py  intent_aware_optimizer.py  meta_prompt.py  prompt_optimizer.py
src/chaos_auto_prompt/providers/: __init__.py  base.py  google.py  openai.py
src/chaos_auto_prompt/utils/: __init__.py  async_eval.py  construction_extractor.py  intent_extractor.py  xml_parser.py
tests/: .env.example  README_TESTS.md  TEST_COMPLETION_REPORT.md  UNIT_TEST_SUMMARY.md  pytest.ini  run_tests.sh
tests/unit/: conftest.py  test_construction_extractor.py  test_dataset_splitter.py  test_intent_aware_optimizer.py  test_intent_extractor.py  test_meta_prompt.py  test_pricing.py  test_providers.py  test_settings.py  test_two_stage_evaluator.py  test_xml_parser.py
