[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-auto-prompt"
version = "0.1.0"
description = "Production-grade Prompt Learning Optimization SDK with FastAPI REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chaos AI Vision", email = "contact@chaosvision.com.vn"}
]
keywords = ["prompt-optimization", "llm", "prompt-engineering", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # AI Providers
    "openai>=1.10.0",
    "google-genai>=0.3.0",
    "tiktoken>=0.5.0",

    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",  # HuggingFace datasets

    # HTTP & Async
    "httpx>=0.26.0",
    "requests>=2.31.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",  # For testing FastAPI

    # Code Quality
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",

    # Type Stubs
    "types-requests>=2.31.0",
]

cli = [
    "click>=8.1.0",
    "click-spinner>=0.1.8",
]

evaluators = [
    "arize-phoenix-evals>=0.1.0",
    "arize-phoenix-client>=0.1.0",
    "arize-toolkit>=0.1.0",
    "scikit-learn>=1.3.0",
]

all = [
    "chaos-auto-prompt[dev,cli,evaluators]",
]

[project.urls]
Homepage = "https://github.com/chaosvision/chaos-auto-prompt"
Documentation = "https://github.com/chaosvision/chaos-auto-prompt#readme"
Repository = "https://github.com/chaosvision/chaos-auto-prompt"
Issues = "https://github.com/chaosvision/chaos-auto-prompt/issues"

[project.scripts]
chaos-auto-prompt = "chaos_auto_prompt.cli.main:main"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default exclude
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "tiktoken.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src/chaos_auto_prompt --cov-report=term-missing"

[tool.coverage.run]
source = ["src/chaos_auto_prompt"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
